# A-sekurkopio

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/A_sekurkopio/: __init__.py  auto_cmd.py  cli.py  export_cmd.py  import_cmd.py  install_cmd.py  restore_cmd.py  service.py
src/A_sekurkopio/data/: __init__.py  storage.py
tests/: conftest.py  test_cli.py  test_service.py  test_storage.py
